--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                         <div class="contact-form-wrapper">
                             <div class="introduce">
 
-                                <form class="rnt-contact-form rwt-dynamic-form row" id="contact-form" method="POST" action="http://18.221.122.14:8000/mail.php">
+                                <form class="rnt-contact-form rwt-dynamic-form row" id="contact-form" method="POST" action="/api/send-email">
 
                                     <div class="col-lg-6">
                                         <div class="form-group">
